[CDS-81940]: updating deployment stage plan creator v1 UTs