@@ -1,14 +1,19 @@
 /*
- * Copyright 2021 Harness Inc. All rights reserved.
+ * Copyright 2023 Harness Inc. All rights reserved.
  * Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
  * that can be found in the licenses directory at the root of this repository, also available at
  * https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.
  */
 
-package io.harness.cdng.creator.plan.stage;
+package io.harness.cdng.creator.plan.stage.v1;
 
 import static io.harness.cdng.service.beans.ServiceDefinitionType.KUBERNETES;
-import static io.harness.rule.OwnerRule.PRASHANTSHARMA;
+import static io.harness.rule.OwnerRule.ABHINAV_MITTAL;
+import static io.harness.rule.OwnerRule.MLUKIC;
+import static io.harness.rule.OwnerRule.NAMANG;
+import static io.harness.rule.OwnerRule.TATHAGAT;
+import static io.harness.rule.OwnerRule.VAIBHAV_SI;
+import static io.harness.rule.OwnerRule.YOGESH;
 
 import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -32,15 +37,20 @@ import io.harness.annotations.dev.HarnessTeam;
 import io.harness.annotations.dev.OwnedBy;
 import io.harness.category.element.UnitTests;
 import io.harness.cdng.CDNGTestBase;
+import io.harness.cdng.creator.plan.stage.DeploymentStagePlanCreationInfo;
+import io.harness.cdng.creator.plan.stage.DeploymentStageType;
+import io.harness.cdng.creator.plan.stage.MultiServiceEnvDeploymentStageDetailsInfo;
+import io.harness.cdng.creator.plan.stage.SingleServiceEnvDeploymentStageDetailsInfo;
+import io.harness.cdng.creator.plan.stage.StagePlanCreatorHelper;
 import io.harness.cdng.creator.plan.stage.service.DeploymentStagePlanCreationInfoService;
 import io.harness.cdng.envgroup.yaml.EnvironmentGroupYaml;
 import io.harness.cdng.environment.filters.Entity;
 import io.harness.cdng.environment.filters.FilterType;
 import io.harness.cdng.environment.filters.FilterYaml;
-import io.harness.cdng.environment.helper.EnvironmentInfraFilterHelper;
 import io.harness.cdng.environment.yaml.EnvironmentYamlV2;
 import io.harness.cdng.environment.yaml.EnvironmentsYaml;
 import io.harness.cdng.infra.yaml.InfraStructureDefinitionYaml;
+import io.harness.cdng.service.NGServiceEntityHelper;
 import io.harness.cdng.service.beans.ServiceUseFromStageV2;
 import io.harness.cdng.service.beans.ServiceYamlV2;
 import io.harness.cdng.service.beans.ServicesMetadata;
@@ -58,9 +68,7 @@ import io.harness.freeze.beans.yaml.FreezeInfoConfig;
 import io.harness.freeze.entity.FreezeConfigEntity;
 import io.harness.freeze.mappers.NGFreezeDtoMapper;
 import io.harness.freeze.service.FreezeEvaluateService;
-import io.harness.ng.core.dto.ResponseDTO;
 import io.harness.ngsettings.SettingValueType;
-import io.harness.ngsettings.client.remote.NGSettingsClient;
 import io.harness.ngsettings.dto.SettingValueResponseDTO;
 import io.harness.plancreator.execution.ExecutionElementConfig;
 import io.harness.plancreator.execution.ExecutionWrapperConfig;
@@ -78,27 +86,24 @@ import io.harness.pms.yaml.YamlNode;
 import io.harness.pms.yaml.YamlUtils;
 import io.harness.remote.client.NGRestUtils;
 import io.harness.rule.Owner;
-import io.harness.rule.OwnerRule;
 import io.harness.serializer.KryoSerializer;
 import io.harness.utils.NGFeatureFlagHelperService;
-import io.harness.yaml.core.failurestrategy.FailureStrategyConfig;
-import io.harness.yaml.core.failurestrategy.NGFailureType;
-import io.harness.yaml.core.failurestrategy.OnFailureConfig;
-import io.harness.yaml.core.failurestrategy.abort.AbortFailureActionConfig;
+import io.harness.yaml.core.failurestrategy.abort.v1.AbortFailureActionConfigV1;
+import io.harness.yaml.core.failurestrategy.v1.FailureConfigV1;
+import io.harness.yaml.core.failurestrategy.v1.NGFailureTypeV1;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.databind.node.TextNode;
 import com.google.common.collect.Lists;
 import com.google.inject.Inject;
 import java.io.IOException;
-import java.io.InputStream;
 import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Scanner;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
@@ -119,24 +124,19 @@ import org.mockito.MockedStatic;
 import org.mockito.MockitoAnnotations;
 import org.mockito.Spy;
 import org.powermock.core.classloader.annotations.PrepareForTest;
-import retrofit2.Call;
 
 @OwnedBy(HarnessTeam.CDC)
 @RunWith(JUnitParamsRunner.class)
-public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
+public class DeploymentStagePlanCreatorTest extends CDNGTestBase {
   @Mock private NGFeatureFlagHelperService featureFlagHelperService;
   @Inject private KryoSerializer kryoSerializer;
   @Mock private FreezeEvaluateService freezeEvaluateService;
   @Mock private AccessControlClient accessControlClient;
   @Spy private StagePlanCreatorHelper stagePlanCreatorHelper;
+  @Mock private NGServiceEntityHelper serviceEntityHelper;
   @Mock private DeploymentStagePlanCreationInfoService deploymentStagePlanCreationInfoService;
   @Spy private ExecutorService executorService;
-  @InjectMocks private DeploymentStagePMSPlanCreatorV2 deploymentStagePMSPlanCreator;
-
-  @Mock private EnvironmentInfraFilterHelper environmentInfraFilterHelper;
-
-  @Mock private NGSettingsClient ngSettingsClient;
-  @Mock private Call<ResponseDTO<SettingValueResponseDTO>> request;
+  @InjectMocks private DeploymentStagePlanCreator deploymentStagePlanCreator;
 
   private AutoCloseable mocks;
   ObjectMapper mapper = new ObjectMapper();
@@ -146,7 +146,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
     mocks = MockitoAnnotations.openMocks(this);
 
     Reflect.on(stagePlanCreatorHelper).set("kryoSerializer", kryoSerializer);
-    Reflect.on(deploymentStagePMSPlanCreator).set("kryoSerializer", kryoSerializer);
+    Reflect.on(deploymentStagePlanCreator).set("kryoSerializer", kryoSerializer);
   }
 
   @After
@@ -157,69 +157,22 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
     executorService.shutdown();
   }
 
-  private YamlField getYamlFieldFromPath(String path) throws IOException {
-    ClassLoader classLoader = this.getClass().getClassLoader();
-    InputStream yamlFile = classLoader.getResourceAsStream(path);
-    assertThat(yamlFile).isNotNull();
-
-    String yaml = new Scanner(yamlFile, "UTF-8").useDelimiter("\\A").next();
-    yaml = YamlUtils.injectUuid(yaml);
-    return YamlUtils.readTree(yaml);
-  }
-
-  private String getYamlFromPath(String path) {
-    ClassLoader classLoader = this.getClass().getClassLoader();
-    InputStream yamlFile = classLoader.getResourceAsStream(path);
-    assertThat(yamlFile).isNotNull();
-
-    return new Scanner(yamlFile, "UTF-8").useDelimiter("\\A").next();
-  }
-
   @Test
-  @Owner(developers = PRASHANTSHARMA)
+  @Owner(developers = {YOGESH, MLUKIC})
   @Category(UnitTests.class)
   @Parameters(method = "getDeploymentStageConfig")
   @PrepareForTest(YamlUtils.class)
-  public void testAddCDExecutionDependencies(DeploymentStageNode node) throws IOException {
-    YamlField executionField = getYamlFieldFromPath("cdng/plan/service.yml");
-
-    String executionNodeId = executionField.getNode().getUuid();
-    LinkedHashMap<String, PlanCreationResponse> planCreationResponseMap = new LinkedHashMap<>();
-    JsonNode jsonNode = mapper.valueToTree(node);
-    PlanCreationContext ctx = PlanCreationContext.builder()
-                                  .globalContext(Map.of("metadata",
-                                      PlanCreationContextValue.newBuilder().setAccountIdentifier("accountId").build()))
-                                  .currentField(new YamlField(new YamlNode("spec", jsonNode)))
-                                  .build();
-    deploymentStagePMSPlanCreator.addCDExecutionDependencies(planCreationResponseMap, executionField, ctx, node);
-    assertThat(planCreationResponseMap.containsKey(executionNodeId)).isEqualTo(true);
-    assertThat(planCreationResponseMap.get(executionNodeId)
-                   .getDependencies()
-                   .getDependencyMetadataMap()
-                   .get(executionNodeId)
-                   .getParentInfo()
-                   .getDataMap()
-                   .get("stageId")
-                   .getStringValue())
-        .isEqualTo("nodeuuid");
-  }
-
-  @Test
-  @Owner(developers = OwnerRule.YOGESH)
-  @Category(UnitTests.class)
-  @Parameters(method = "getDeploymentStageConfig")
-  @PrepareForTest(YamlUtils.class)
-  public void testCreatePlanForChildrenNodes(DeploymentStageNode node) throws IOException {
+  public void testCreatePlanForChildrenNodes(DeploymentStageNodeV1 node) throws IOException {
     doReturn(false).when(stagePlanCreatorHelper).isProjectScopedResourceConstraintQueueByFFOrSetting(any());
-    node.setFailureStrategies(
-        ParameterField.createValueField(List.of(FailureStrategyConfig.builder()
-                                                    .onFailure(OnFailureConfig.builder()
-                                                                   .errors(List.of(NGFailureType.ALL_ERRORS))
-                                                                   .action(AbortFailureActionConfig.builder().build())
-                                                                   .build())
-                                                    .build())));
+    node.setType(YAMLFieldNameConstants.DEPLOYMENT_STAGE_V1);
+    node.setFailure(ParameterField.createValueField(List.of(FailureConfigV1.builder()
+                                                                .errors(List.of(NGFailureTypeV1.ALL_ERRORS))
+                                                                .action(AbortFailureActionConfigV1.builder().build())
+                                                                .build())));
 
-    JsonNode jsonNode = mapper.valueToTree(node);
+    JsonNode jsonNode = YamlUtils.readTree(node, "spec", null).getNode().getCurrJsonNode();
+    ((ObjectNode) jsonNode).put("type", YAMLFieldNameConstants.DEPLOYMENT_STAGE_V1);
+
     PlanCreationContext ctx = PlanCreationContext.builder()
                                   .globalContext(Map.of("metadata",
                                       PlanCreationContextValue.newBuilder().setAccountIdentifier("accountId").build()))
@@ -230,12 +183,13 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
          MockedStatic<NGRestUtils> ngRestUtilsMockedStatic = mockStatic(NGRestUtils.class)) {
       SettingValueResponseDTO settingValueResponseDTO =
           SettingValueResponseDTO.builder().value("true").valueType(SettingValueType.BOOLEAN).build();
+      when(serviceEntityHelper.getServiceDefinitionTypeFromService(any(), any())).thenReturn(KUBERNETES);
       when(YamlUtils.getGivenYamlNodeFromParentPath(any(), any())).thenReturn(new YamlNode("spec", jsonNode));
       when(NGRestUtils.getResponse(any())).thenReturn(settingValueResponseDTO);
       LinkedHashMap<String, PlanCreationResponse> planCreationResponseMap =
-          deploymentStagePMSPlanCreator.createPlanForChildrenNodes(ctx, node);
+          deploymentStagePlanCreator.createPlanForChildrenNodes(ctx, new YamlField(new YamlNode(jsonNode)));
 
-      assertThat(planCreationResponseMap).hasSize(11);
+      assertThat(planCreationResponseMap).hasSize(10);
       assertThat(planCreationResponseMap.values()
                      .stream()
                      .map(PlanCreationResponse::getPlanNode)
@@ -248,7 +202,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.ABHINAV_MITTAL)
+  @Owner(developers = {ABHINAV_MITTAL, MLUKIC})
   @Category(UnitTests.class)
   public void failIfProjectIsFrozen() {
     List<FreezeSummaryResponseDTO> freezeSummaryResponseDTOList = Lists.newArrayList(createGlobalFreezeResponse());
@@ -269,7 +223,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                           .build()))
                                   .build();
     when(accessControlClient.hasAccess(any(ResourceScope.class), any(Resource.class), anyString())).thenReturn(false);
-    assertThatThrownBy(() -> deploymentStagePMSPlanCreator.failIfProjectIsFrozen(ctx))
+    assertThatThrownBy(() -> deploymentStagePlanCreator.failIfProjectIsFrozen(ctx))
         .isInstanceOf(NGFreezeException.class)
         .matches(ex -> ex.getMessage().equals("Execution can't be performed because project is frozen"));
 
@@ -277,7 +231,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.ABHINAV_MITTAL)
+  @Owner(developers = {ABHINAV_MITTAL, MLUKIC})
   @Category(UnitTests.class)
   public void failIfProjectIsFrozenWithOverridePermission() {
     doReturn(false).when(featureFlagHelperService).isEnabled(anyString(), any());
@@ -294,14 +248,14 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                           .setExecutionContext(PlanExecutionContext.newBuilder().setPrincipalInfo(
                                               ExecutionPrincipalInfo.newBuilder()
                                                   .setPrincipal("prinicipal")
-                                                  .setPrincipalType(io.harness.pms.contracts.plan.PrincipalType.USER)
+                                                  .setPrincipalType(PrincipalType.USER)
                                                   .build()))
                                           .build()))
                                   .build();
     when(
         accessControlClient.hasAccess(any(Principal.class), any(ResourceScope.class), any(Resource.class), anyString()))
         .thenReturn(true);
-    deploymentStagePMSPlanCreator.failIfProjectIsFrozen(ctx);
+    deploymentStagePlanCreator.failIfProjectIsFrozen(ctx);
 
     verify(freezeEvaluateService, times(0)).getActiveFreezeEntities(anyString(), anyString(), anyString(), anyString());
   }
@@ -323,11 +277,11 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   private Object[][] getDeploymentStageConfig() {
     String svcId = "svcId";
     String envId = "envId";
-    Map<String, Object> step = Map.of("name", "teststep");
+    Map<String, Object> step = Map.of("name", "teststep", "id", "teststep", "type", "K8sRollingDeploy");
     Map<String, Object> provisionStep = Map.of("name", "testprovisionstep");
 
-    final DeploymentStageNode node1 = buildNode(
-        DeploymentStageConfig.builder()
+    final DeploymentStageNodeV1 node1 = buildNode(
+        DeploymentStageConfigV1.builder()
             .uuid("stageUuid")
             .service(
                 ServiceYamlV2.builder().uuid("serviceuuid").serviceRef(ParameterField.createValueField(svcId)).build())
@@ -347,15 +301,11 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                             .identifier(ParameterField.createValueField("infra"))
                                             .build())))
                              .build())
-            .deploymentType(KUBERNETES)
-            .execution(ExecutionElementConfig.builder()
-                           .uuid("executionuuid")
-                           .steps(List.of(ExecutionWrapperConfig.builder().step(mapper.valueToTree(step)).build()))
-                           .build())
+            .steps(List.of(mapper.valueToTree(step)))
             .build());
 
-    final DeploymentStageNode node2 = buildNode(
-        DeploymentStageConfig.builder()
+    final DeploymentStageNodeV1 node2 = buildNode(
+        DeploymentStageConfigV1.builder()
             .uuid("stageUuid")
             .service(
                 ServiceYamlV2.builder().uuid("serviceuuid").serviceRef(ParameterField.createValueField(svcId)).build())
@@ -375,11 +325,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                      .identifier(ParameterField.createValueField("infra"))
                                      .build()))
                              .build())
-            .deploymentType(KUBERNETES)
-            .execution(ExecutionElementConfig.builder()
-                           .uuid("executionuuid")
-                           .steps(List.of(ExecutionWrapperConfig.builder().step(mapper.valueToTree(step)).build()))
-                           .build())
+            .steps(List.of(mapper.valueToTree(step)))
             .build());
 
     return new Object[][] {{node1}, {node2}};
@@ -390,8 +336,8 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
     String envId = "envId";
     Map<String, Object> step = Map.of("name", "teststep");
 
-    final DeploymentStageNode nodeEnvsFilters = buildNode(
-        DeploymentStageConfig.builder()
+    final DeploymentStageNodeV1 nodeEnvsFilters = buildNode(
+        DeploymentStageConfigV1.builder()
             .uuid("stageUuid")
             .service(
                 ServiceYamlV2.builder().uuid("serviceuuid").serviceRef(ParameterField.createValueField(svcId)).build())
@@ -413,15 +359,11 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                               .entities(Set.of(Entity.environments, Entity.infrastructures))
                                               .build())))
                               .build())
-            .deploymentType(KUBERNETES)
-            .execution(ExecutionElementConfig.builder()
-                           .uuid("executionuuid")
-                           .steps(List.of(ExecutionWrapperConfig.builder().step(mapper.valueToTree(step)).build()))
-                           .build())
+            .steps(List.of(mapper.valueToTree(step)))
             .build());
 
-    final DeploymentStageNode multiSvcMultienvsNodeWithFilter = buildNode(
-        DeploymentStageConfig.builder()
+    final DeploymentStageNodeV1 multiSvcMultienvsNodeWithFilter = buildNode(
+        DeploymentStageConfigV1.builder()
             .uuid("stageUuid")
             .services(ServicesYaml.builder()
                           .uuid("services-uuid")
@@ -449,15 +391,11 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                              .entities(Set.of(Entity.environments, Entity.infrastructures))
                                              .build())))
                               .build())
-            .deploymentType(KUBERNETES)
-            .execution(ExecutionElementConfig.builder()
-                           .uuid("executionuuid")
-                           .steps(List.of(ExecutionWrapperConfig.builder().step(mapper.valueToTree(step)).build()))
-                           .build())
+            .steps(List.of(mapper.valueToTree(step)))
             .build());
 
-    final DeploymentStageNode multiSvcWithEnvGroupNodeWithFilter = buildNode(
-        DeploymentStageConfig.builder()
+    final DeploymentStageNodeV1 multiSvcWithEnvGroupNodeWithFilter = buildNode(
+        DeploymentStageConfigV1.builder()
             .uuid("stageUuid")
             .services(ServicesYaml.builder()
                           .uuid("services-uuid")
@@ -485,159 +423,89 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                                  .build())))
                                   .envGroupRef(ParameterField.<String>builder().value("envGroup").build())
                                   .build())
-            .deploymentType(KUBERNETES)
-            .execution(ExecutionElementConfig.builder()
-                           .uuid("executionuuid")
-                           .steps(List.of(ExecutionWrapperConfig.builder().step(mapper.valueToTree(step)).build()))
-                           .build())
+            .steps(List.of(mapper.valueToTree(step)))
             .build());
 
-    final DeploymentStageNode multiSvcSingleEnv = buildNode(
-        DeploymentStageConfig.builder()
-            .uuid("stageUuid")
-            .services(ServicesYaml.builder()
-                          .uuid("services-uuid")
-                          .values(ParameterField.createValueField(
-                              Arrays.asList(ServiceYamlV2.builder()
-                                                .uuid("serviceuuid")
-                                                .serviceRef(ParameterField.createValueField(svcId))
-                                                .build())))
-                          .build())
-            .environment(EnvironmentYamlV2.builder()
-                             .uuid("envuuid")
-                             .environmentRef(ParameterField.<String>builder().value(envId).build())
-                             .deployToAll(ParameterField.createValueField(false))
-                             .infrastructureDefinitions(ParameterField.createValueField(
-                                 asList(InfraStructureDefinitionYaml.builder()
-                                            .identifier(ParameterField.createValueField("infra"))
-                                            .build())))
-                             .build())
-            .deploymentType(KUBERNETES)
-            .execution(ExecutionElementConfig.builder()
-                           .uuid("executionuuid")
-                           .steps(List.of(ExecutionWrapperConfig.builder().step(mapper.valueToTree(step)).build()))
-                           .build())
-            .build());
+    final DeploymentStageNodeV1 multiSvcSingleEnv =
+        buildNode(DeploymentStageConfigV1.builder()
+                      .uuid("stageUuid")
+                      .services(ServicesYaml.builder()
+                                    .uuid("services-uuid")
+                                    .values(ParameterField.createValueField(
+                                        Arrays.asList(ServiceYamlV2.builder()
+                                                          .uuid("serviceuuid")
+                                                          .serviceRef(ParameterField.createValueField(svcId))
+                                                          .build())))
+                                    .build())
+                      .environment(EnvironmentYamlV2.builder()
+                                       .uuid("envuuid")
+                                       .environmentRef(ParameterField.<String>builder().value(envId).build())
+                                       .deployToAll(ParameterField.createValueField(false))
+                                       .infrastructureDefinitions(ParameterField.createValueField(
+                                           asList(InfraStructureDefinitionYaml.builder()
+                                                      .identifier(ParameterField.createValueField("infra"))
+                                                      .build())))
+                                       .build())
+                      .steps(List.of(mapper.valueToTree(step)))
+                      .build());
 
     return new Object[][] {{nodeEnvsFilters}, {multiSvcMultienvsNodeWithFilter}, {multiSvcWithEnvGroupNodeWithFilter},
         {multiSvcSingleEnv}};
   }
-  // TODO VS: Fix these tests
 
-  //  @Test
-  //  @Owner(developers = OwnerRule.ROHITKARELIA)
-  //  @Category(UnitTests.class)
-  //  public void testfilterInfras() {
-  //    List<FilterYaml> filterYamlList =
-  //        asList(FilterYaml.builder().type(FilterType.all).entities(Set.of(Entity.infrastructures)).build());
-  //    Set<InfrastructureEntity> infrastructureEntitySet =
-  //        Set.of(InfrastructureEntity.builder()
-  //                   .accountId("accountId")
-  //                   .identifier("infra-id")
-  //                   .envIdentifier("envId")
-  //                   .tag(NGTag.builder().key("infra").value("dev").build())
-  //                   .build());
-  //    doReturn(infrastructureEntitySet).when(environmentInfraFilterHelper).applyFilteringOnInfras(any(), any());
-  //    List<EnvironmentYamlV2> environmentYamlV2List =
-  //        deploymentStagePMSPlanCreator.filterInfras(filterYamlList, "envId", infrastructureEntitySet);
-  //    assertThat(environmentYamlV2List.size()).isEqualTo(infrastructureEntitySet.size());
-  //  }
-  //
-  //  @Test
-  //  @Owner(developers = OwnerRule.ROHITKARELIA)
-  //  @Category(UnitTests.class)
-  //  public void testcreateInfraDefinitionYaml() {
-  //    InfraStructureDefinitionYaml infraDefinitionYaml = deploymentStagePMSPlanCreator.createInfraDefinitionYaml(
-  //        InfrastructureEntity.builder().identifier("infra-id").build());
-  //    assertThat(infraDefinitionYaml).isNotNull();
-  //    assertThat(infraDefinitionYaml.getIdentifier()).isNotNull();
-  //  }
-  //
-  //  @Test
-  //  @Owner(developers = OwnerRule.ROHITKARELIA)
-  //  @Category(UnitTests.class)
-  //  @Parameters(method = "getDeploymentStageConfigForMultiSvcMultiEvs")
-  //  public void testCreatePlanForChildrenNodesWithFilters_0(DeploymentStageNode node) {
-  //    when(environmentInfraFilterHelper.areFiltersPresent(any())).thenReturn(true);
-  //
-  //    node.setFailureStrategies(List.of(FailureStrategyConfig.builder()
-  //                                          .onFailure(OnFailureConfig.builder()
-  //                                                         .errors(List.of(NGFailureType.ALL_ERRORS))
-  //                                                         .action(AbortFailureActionConfig.builder().build())
-  //                                                         .build())
-  //                                          .build()));
-  //
-  //    JsonNode jsonNode = mapper.valueToTree(node);
-  //    PlanCreationContext ctx = PlanCreationContext.builder()
-  //                                  .globalContext(Map.of("metadata",
-  //                                      PlanCreationContextValue.newBuilder().setAccountIdentifier("accountId").build()))
-  //                                  .currentField(new YamlField(new YamlNode("spec", jsonNode)))
-  //                                  .build();
-  //    LinkedHashMap<String, PlanCreationResponse> planCreationResponseMap =
-  //        deploymentStagePMSPlanCreator.createPlanForChildrenNodes(ctx, node);
-  //
-  //    assertThat(planCreationResponseMap).hasSize(9);
-  //    assertThat(planCreationResponseMap.values()
-  //                   .stream()
-  //                   .map(PlanCreationResponse::getPlanNode)
-  //                   .filter(Objects::nonNull)
-  //                   .map(PlanNode::getIdentifier)
-  //                   .collect(Collectors.toSet()))
-  //        .containsAnyOf("service", "infrastructure", "artifacts", "manifests", "configFiles");
-  //  }
-  private DeploymentStageNode buildNode(DeploymentStageConfig config) {
-    final DeploymentStageNode node = new DeploymentStageNode();
+  private DeploymentStageNodeV1 buildNode(DeploymentStageConfigV1 config) {
+    final DeploymentStageNodeV1 node = DeploymentStageNodeV1.builder().build();
     node.setUuid("nodeuuid");
-    node.setDeploymentStageConfig(config);
+    node.setType(YAMLFieldNameConstants.DEPLOYMENT_STAGE_V1);
+    node.setSpec(config);
     return node;
   }
 
   @Test
-  @Owner(developers = OwnerRule.VAIBHAV_SI)
+  @Owner(developers = {VAIBHAV_SI, MLUKIC})
   @Category(UnitTests.class)
   public void testGetIdentifierWithExpressionForGitOps() {
     // Gitops with single service, single env.
-    DeploymentStageNode node = DeploymentStageNode.builder()
-                                   .deploymentStageConfig(DeploymentStageConfig.builder().gitOpsEnabled(true).build())
-                                   .build();
+    DeploymentStageNodeV1 node =
+        DeploymentStageNodeV1.builder().spec(DeploymentStageConfigV1.builder().gitOpsEnabled(true).build()).build();
     PlanCreationContext context =
         PlanCreationContext.builder().currentField(new YamlField("node", new YamlNode(new TextNode("abcc")))).build();
 
-    assertThat(deploymentStagePMSPlanCreator.getIdentifierWithExpression(context, node, "id1")).isEqualTo("id1");
+    assertThat(deploymentStagePlanCreator.getIdentifierWithExpression(context, node, "id1")).isEqualTo("id1");
 
     // Gitops with single service, multi env.
-    node = DeploymentStageNode.builder()
-               .deploymentStageConfig(DeploymentStageConfig.builder()
-                                          .gitOpsEnabled(true)
-                                          .environments(EnvironmentsYaml.builder().build())
-                                          .build())
+    node = DeploymentStageNodeV1.builder()
+               .spec(DeploymentStageConfigV1.builder()
+                         .gitOpsEnabled(true)
+                         .environments(EnvironmentsYaml.builder().build())
+                         .build())
                .build();
-    assertThat(deploymentStagePMSPlanCreator.getIdentifierWithExpression(context, node, "id1")).isEqualTo("id1");
+    assertThat(deploymentStagePlanCreator.getIdentifierWithExpression(context, node, "id1")).isEqualTo("id1");
 
     // Gitops with multi service, multi env.
-    node = DeploymentStageNode.builder()
-               .deploymentStageConfig(DeploymentStageConfig.builder()
-                                          .gitOpsEnabled(true)
-                                          .services(ServicesYaml.builder().build())
-                                          .environments(EnvironmentsYaml.builder().build())
-                                          .build())
+    node = DeploymentStageNodeV1.builder()
+               .spec(DeploymentStageConfigV1.builder()
+                         .gitOpsEnabled(true)
+                         .services(ServicesYaml.builder().build())
+                         .environments(EnvironmentsYaml.builder().build())
+                         .build())
                .build();
-    assertThat(deploymentStagePMSPlanCreator.getIdentifierWithExpression(context, node, "id1"))
+    assertThat(deploymentStagePlanCreator.getIdentifierWithExpression(context, node, "id1"))
         .isEqualTo("id1<+strategy.identifierPostFix>");
   }
 
   @Test
-  @Owner(developers = OwnerRule.TATHAGAT)
+  @Owner(developers = {TATHAGAT, MLUKIC})
   @Category(UnitTests.class)
   public void addServiceNodeUseFromStageFromServicesError_0() throws IOException {
-    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/pipeline.yaml");
+    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/v1/pipeline.yaml");
     YamlField pipeline = new YamlField("pipeline", YamlNode.fromYamlPath(pipelineYaml, ""));
-    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 6));
+    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 5));
     assertThatExceptionOfType(InvalidArgumentsException.class)
         .isThrownBy(
             ()
-                -> deploymentStagePMSPlanCreator.useServicesYamlFromStage(
-                    DeploymentStageConfig.builder()
+                -> deploymentStagePlanCreator.useServicesYamlFromStage(
+                    DeploymentStageConfigV1.builder()
                         .services(ServicesYaml.builder().useFromStage(ServiceUseFromStageV2.builder().build()).build())
                         .build(),
                     specField))
@@ -645,16 +513,16 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.TATHAGAT)
+  @Owner(developers = {TATHAGAT, MLUKIC})
   @Category(UnitTests.class)
   public void addServiceNodeUseFromStageFromServicesError_1() throws IOException {
-    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/pipeline.yaml");
+    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/v1/pipeline.yaml");
     YamlField pipeline = new YamlField("pipeline", YamlNode.fromYamlPath(pipelineYaml, ""));
-    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 6));
+    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 5));
     assertThatExceptionOfType(InvalidRequestException.class)
         .isThrownBy(()
-                        -> deploymentStagePMSPlanCreator.useServicesYamlFromStage(
-                            DeploymentStageConfig.builder()
+                        -> deploymentStagePlanCreator.useServicesYamlFromStage(
+                            DeploymentStageConfigV1.builder()
                                 .services(ServicesYaml.builder()
                                               .useFromStage(ServiceUseFromStageV2.builder().stage("stage2").build())
                                               .build())
@@ -665,16 +533,16 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.TATHAGAT)
+  @Owner(developers = {TATHAGAT, MLUKIC})
   @Category(UnitTests.class)
   public void addServiceNodeUseFromStageFromServicesError_2() throws IOException {
-    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/pipeline.yaml");
+    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/v1/pipeline.yaml");
     YamlField pipeline = new YamlField("pipeline", YamlNode.fromYamlPath(pipelineYaml, ""));
-    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 7));
+    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 6));
     assertThatExceptionOfType(InvalidArgumentsException.class)
         .isThrownBy(()
-                        -> deploymentStagePMSPlanCreator.useServicesYamlFromStage(
-                            DeploymentStageConfig.builder()
+                        -> deploymentStagePlanCreator.useServicesYamlFromStage(
+                            DeploymentStageConfigV1.builder()
                                 .services(ServicesYaml.builder()
                                               .useFromStage(ServiceUseFromStageV2.builder().stage("random").build())
                                               .build())
@@ -684,16 +552,16 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.TATHAGAT)
+  @Owner(developers = {TATHAGAT, MLUKIC})
   @Category(UnitTests.class)
   public void addServiceNodeUseFromStageFromServicesError_3() throws IOException {
-    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/pipeline.yaml");
+    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/v1/pipeline.yaml");
     YamlField pipeline = new YamlField("pipeline", YamlNode.fromYamlPath(pipelineYaml, ""));
-    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 8));
+    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 7));
     assertThatExceptionOfType(InvalidArgumentsException.class)
         .isThrownBy(()
-                        -> deploymentStagePMSPlanCreator.useServicesYamlFromStage(
-                            DeploymentStageConfig.builder()
+                        -> deploymentStagePlanCreator.useServicesYamlFromStage(
+                            DeploymentStageConfigV1.builder()
                                 .services(ServicesYaml.builder()
                                               .useFromStage(ServiceUseFromStageV2.builder().stage("stage5").build())
                                               .build())
@@ -704,14 +572,14 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.TATHAGAT)
+  @Owner(developers = {TATHAGAT, MLUKIC})
   @Category(UnitTests.class)
   public void addServiceNodeUseFromStageFromServicesWithMetadata() throws IOException {
-    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/pipeline.yaml");
-    YamlField pipeline = new YamlField("pipeline", YamlNode.fromYamlPath(pipelineYaml, ""));
-    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 10));
-    ServicesYaml services = deploymentStagePMSPlanCreator.useServicesYamlFromStage(
-        DeploymentStageConfig.builder()
+    String pipelineYaml = readFileIntoUTF8String("cdng/creator/servicePlanCreator/v1/pipeline.yaml");
+    YamlField pipeline = new YamlField(YamlNode.fromYamlPath(pipelineYaml, ""));
+    YamlField specField = new YamlField("spec", getStageNodeAtIndex(pipeline, 9));
+    ServicesYaml services = deploymentStagePlanCreator.useServicesYamlFromStage(
+        DeploymentStageConfigV1.builder()
             .services(
                 ServicesYaml.builder()
                     .servicesMetadata(
@@ -733,7 +601,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.NAMANG)
+  @Owner(developers = {NAMANG, MLUKIC})
   @Category(UnitTests.class)
   public void testSaveSingleServiceEnvDeploymentStagePlanCreationSummary_NegativeCases() throws InterruptedException {
     PlanCreationContext ctx = PlanCreationContext.builder().build();
@@ -743,31 +611,30 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
             .build();
 
     // plan creation response cases
-    DeploymentStageNode deploymentStageNode = (DeploymentStageNode) getDeploymentStageConfig()[0][0];
-    DeploymentStageNode multiDeploymentStageNode =
-        (DeploymentStageNode) getDeploymentStageConfigForMultiSvcMultiEvs()[0][0];
+    DeploymentStageNodeV1 deploymentStageNode = (DeploymentStageNodeV1) getDeploymentStageConfig()[0][0];
+    DeploymentStageNodeV1 multiDeploymentStageNode =
+        (DeploymentStageNodeV1) getDeploymentStageConfigForMultiSvcMultiEvs()[0][0];
     CountDownLatch latch = new CountDownLatch(7);
 
     executorService.submit(() -> {
-      deploymentStagePMSPlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
-          null, ctx, deploymentStageNode);
+      deploymentStagePlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(null, ctx, deploymentStageNode);
       latch.countDown();
     });
 
     executorService.submit(() -> {
-      deploymentStagePMSPlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
+      deploymentStagePlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
           PlanCreationResponse.builder().build(), ctx, deploymentStageNode);
       latch.countDown();
     });
 
     executorService.submit(() -> {
-      deploymentStagePMSPlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
+      deploymentStagePlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
           PlanCreationResponse.builder().planNode(PlanNode.builder().build()).build(), ctx, deploymentStageNode);
       latch.countDown();
     });
 
     executorService.submit(() -> {
-      deploymentStagePMSPlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
+      deploymentStagePlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
           faultyServicePlanCreationResponse, ctx, deploymentStageNode);
       latch.countDown();
     });
@@ -775,25 +642,25 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
     // multi deployment cases
     // multiSvcMultiEnvsNodeWithFilter
     executorService.submit(() -> {
-      deploymentStagePMSPlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
+      deploymentStagePlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
           faultyServicePlanCreationResponse, ctx,
-          (DeploymentStageNode) getDeploymentStageConfigForMultiSvcMultiEvs()[0][0]);
+          (DeploymentStageNodeV1) getDeploymentStageConfigForMultiSvcMultiEvs()[0][0]);
       latch.countDown();
     });
 
     // multiSvcWithEnvGroupNodeWithFilter
     executorService.submit(() -> {
-      deploymentStagePMSPlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
+      deploymentStagePlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
           faultyServicePlanCreationResponse, ctx,
-          (DeploymentStageNode) getDeploymentStageConfigForMultiSvcMultiEvs()[1][0]);
+          (DeploymentStageNodeV1) getDeploymentStageConfigForMultiSvcMultiEvs()[1][0]);
       latch.countDown();
     });
 
     // nodeEnvsFilters
     executorService.submit(() -> {
-      deploymentStagePMSPlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
+      deploymentStagePlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
           faultyServicePlanCreationResponse, ctx,
-          (DeploymentStageNode) getDeploymentStageConfigForMultiSvcMultiEvs()[2][0]);
+          (DeploymentStageNodeV1) getDeploymentStageConfigForMultiSvcMultiEvs()[2][0]);
       latch.countDown();
     });
     assertThat(latch.await(20, TimeUnit.SECONDS)).isTrue();
@@ -802,7 +669,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.NAMANG)
+  @Owner(developers = {NAMANG, MLUKIC})
   @Category(UnitTests.class)
   public void testSaveSingleServiceEnvDeploymentStagePlanCreationSummary() throws InterruptedException {
     CountDownLatch latch = new CountDownLatch(1);
@@ -831,11 +698,11 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
             .build();
 
     // plan creation response cases
-    DeploymentStageNode deploymentStageNode = (DeploymentStageNode) getDeploymentStageConfig()[0][0];
-    deploymentStageNode.setIdentifier("stageId");
+    DeploymentStageNodeV1 deploymentStageNode = (DeploymentStageNodeV1) getDeploymentStageConfig()[0][0];
+    deploymentStageNode.setId("stageId");
     deploymentStageNode.setName("stage Name");
     executorService.submit(() -> {
-      deploymentStagePMSPlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
+      deploymentStagePlanCreator.saveSingleServiceEnvDeploymentStagePlanCreationSummary(
           servicePlanCreationResponse, ctx, deploymentStageNode);
       latch.countDown();
     });
@@ -862,7 +729,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.ABHINAV_MITTAL)
+  @Owner(developers = {ABHINAV_MITTAL, MLUKIC})
   @Category(UnitTests.class)
   public void testMultiServiceSingleEnvDeploymentStagePlanCreationSummary() throws InterruptedException {
     PlanCreationContext ctx = PlanCreationContext.builder()
@@ -879,11 +746,12 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                   .build();
 
     // plan creation response cases
-    DeploymentStageNode deploymentStageNode = (DeploymentStageNode) getDeploymentStageConfigForMultiSvcMultiEvs()[3][0];
-    deploymentStageNode.setIdentifier("stageId");
+    DeploymentStageNodeV1 deploymentStageNode =
+        (DeploymentStageNodeV1) getDeploymentStageConfigForMultiSvcMultiEvs()[3][0];
+    deploymentStageNode.setId("stageId");
     deploymentStageNode.setName("stage Name");
     // Dummy spec Node.
-    deploymentStagePMSPlanCreator.saveDeploymentStagePlanCreationSummaryForMultiServiceMultiEnv(
+    deploymentStagePlanCreator.saveDeploymentStagePlanCreationSummaryForMultiServiceMultiEnv(
         ctx, deploymentStageNode, new YamlField("node", new YamlNode(new TextNode("abcc"))));
 
     verify(deploymentStagePlanCreationInfoService, times(1))
@@ -894,7 +762,6 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                   .projectIdentifier("projId")
                   .pipelineIdentifier("pipelineId")
                   .stageType(DeploymentStageType.MULTI_SERVICE_ENVIRONMENT)
-                  .deploymentType(KUBERNETES)
                   .stageIdentifier("stageId")
                   .stageName("stage Name")
                   .deploymentStageDetailsInfo(
@@ -907,7 +774,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.ABHINAV_MITTAL)
+  @Owner(developers = {ABHINAV_MITTAL, MLUKIC})
   @Category(UnitTests.class)
   public void testSingleServiceMultiEnvDeploymentStagePlanCreationSummary() throws InterruptedException {
     PlanCreationContext ctx = PlanCreationContext.builder()
@@ -924,11 +791,12 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                   .build();
 
     // plan creation response cases
-    DeploymentStageNode deploymentStageNode = (DeploymentStageNode) getDeploymentStageConfigForMultiSvcMultiEvs()[0][0];
-    deploymentStageNode.setIdentifier("stageId");
+    DeploymentStageNodeV1 deploymentStageNode =
+        (DeploymentStageNodeV1) getDeploymentStageConfigForMultiSvcMultiEvs()[0][0];
+    deploymentStageNode.setId("stageId");
     deploymentStageNode.setName("stage Name");
     // Dummy spec Node.
-    deploymentStagePMSPlanCreator.saveDeploymentStagePlanCreationSummaryForMultiServiceMultiEnv(
+    deploymentStagePlanCreator.saveDeploymentStagePlanCreationSummaryForMultiServiceMultiEnv(
         ctx, deploymentStageNode, new YamlField("node", new YamlNode(new TextNode("abcc"))));
 
     verify(deploymentStagePlanCreationInfoService, times(1))
@@ -939,7 +807,6 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                   .projectIdentifier("projId")
                   .pipelineIdentifier("pipelineId")
                   .stageType(DeploymentStageType.MULTI_SERVICE_ENVIRONMENT)
-                  .deploymentType(KUBERNETES)
                   .stageIdentifier("stageId")
                   .stageName("stage Name")
                   .deploymentStageDetailsInfo(
@@ -952,7 +819,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.ABHINAV_MITTAL)
+  @Owner(developers = {ABHINAV_MITTAL, MLUKIC})
   @Category(UnitTests.class)
   public void testMultiServiceMultiEnvDeploymentStagePlanCreationSummary() throws InterruptedException {
     PlanCreationContext ctx = PlanCreationContext.builder()
@@ -969,11 +836,12 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                   .build();
 
     // plan creation response cases
-    DeploymentStageNode deploymentStageNode = (DeploymentStageNode) getDeploymentStageConfigForMultiSvcMultiEvs()[1][0];
-    deploymentStageNode.setIdentifier("stageId");
+    DeploymentStageNodeV1 deploymentStageNode =
+        (DeploymentStageNodeV1) getDeploymentStageConfigForMultiSvcMultiEvs()[1][0];
+    deploymentStageNode.setId("stageId");
     deploymentStageNode.setName("stage Name");
     // Dummy spec Node.
-    deploymentStagePMSPlanCreator.saveDeploymentStagePlanCreationSummaryForMultiServiceMultiEnv(
+    deploymentStagePlanCreator.saveDeploymentStagePlanCreationSummaryForMultiServiceMultiEnv(
         ctx, deploymentStageNode, new YamlField("node", new YamlNode(new TextNode("abcc"))));
 
     verify(deploymentStagePlanCreationInfoService, times(1))
@@ -984,7 +852,6 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                   .projectIdentifier("projId")
                   .pipelineIdentifier("pipelineId")
                   .stageType(DeploymentStageType.MULTI_SERVICE_ENVIRONMENT)
-                  .deploymentType(KUBERNETES)
                   .stageIdentifier("stageId")
                   .stageName("stage Name")
                   .deploymentStageDetailsInfo(
@@ -997,7 +864,7 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
   }
 
   @Test
-  @Owner(developers = OwnerRule.ABHINAV_MITTAL)
+  @Owner(developers = {ABHINAV_MITTAL, MLUKIC})
   @Category(UnitTests.class)
   public void testEnvGroupDeploymentStagePlanCreationSummary() throws InterruptedException {
     PlanCreationContext ctx = PlanCreationContext.builder()
@@ -1014,11 +881,12 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                                   .build();
 
     // plan creation response cases
-    DeploymentStageNode deploymentStageNode = (DeploymentStageNode) getDeploymentStageConfigForMultiSvcMultiEvs()[2][0];
-    deploymentStageNode.setIdentifier("stageId");
+    DeploymentStageNodeV1 deploymentStageNode =
+        (DeploymentStageNodeV1) getDeploymentStageConfigForMultiSvcMultiEvs()[2][0];
+    deploymentStageNode.setId("stageId");
     deploymentStageNode.setName("stage Name");
     // Dummy spec Node.
-    deploymentStagePMSPlanCreator.saveDeploymentStagePlanCreationSummaryForMultiServiceMultiEnv(
+    deploymentStagePlanCreator.saveDeploymentStagePlanCreationSummaryForMultiServiceMultiEnv(
         ctx, deploymentStageNode, new YamlField("node", new YamlNode(new TextNode("abcc"))));
 
     verify(deploymentStagePlanCreationInfoService, times(1))
@@ -1029,7 +897,6 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
                   .projectIdentifier("projId")
                   .pipelineIdentifier("pipelineId")
                   .stageType(DeploymentStageType.MULTI_SERVICE_ENVIRONMENT)
-                  .deploymentType(KUBERNETES)
                   .stageIdentifier("stageId")
                   .stageName("stage Name")
                   .deploymentStageDetailsInfo(
@@ -1044,14 +911,12 @@ public class DeploymentStagePMSPlanCreatorV2Test extends CDNGTestBase {
 
   private static YamlNode getStageNodeAtIndex(YamlField pipeline, int idx) {
     return pipeline.getNode()
-        .getField("pipeline")
+        .getField("spec")
         .getNode()
         .getField("stages")
         .getNode()
         .asArray()
         .get(idx)
-        .getField("stage")
-        .getNode()
         .getField(YAMLFieldNameConstants.SPEC)
         .getNode();
   }
